# project-one

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt
include/mouse/: mouse_manipulator.h
include/mouse/evemu/: evemu_command_builder.h  evemu_command_builder_impl.h  evemu_mouse_manipulator_impl.h
include/mouse/uinput/: uinput_mouse_manipulator_impl.h
include/screen/: overlay_screen.h  screen_map.h  screen_map_builder.h  screen_map_builder_impl.h  screen_point.h  screen_sector.h
include/screen/cairo/: cairo_overlay_screen_impl.h  cairo_renderer.h
include/screen_navigation/: command.h  screen.h  screen_info.h  screen_map_builder.h  screen_map_builder_impl.h  screen_point.h  screen_sector.h  state.h  state_manager.h  state_manager_impl.h  x11_screen_impl.h  x11_screen_info.h
include/screen_navigation/mouse/: mouse_manipulator.h  uinput_mouse_manipulator_impl.h
include/screen_navigation/overlay_window/: cairo_overlay_window_impl.h  cairo_renderer.h  overlay_window.h
include/x11/: x11_screen_info.h
src/: main.cpp
src/mouse/evemu/: evemu_command_builder_impl.cpp  evemu_mouse_manipulator_impl.cpp
src/mouse/uinput/: uinput_mouse_manipulator_impl.cpp
src/screen/: screen_map.cpp  screen_map_builder_impl.cpp
src/screen/cairo/: cairo_overlay_screen_impl.cpp  cairo_renderer.cpp
src/screen_navigation/: screen_map_builder.cpp  screen_map_builder_impl.cpp  screen_sector.cpp  state_manager_impl.cpp  x11_screen_impl.cpp  x11_screen_info.cpp
src/screen_navigation/mouse/: uinput_mouse_manipulator_impl.cpp
src/x11/: x11_screen_info.cpp
tests/: CMakeLists.txt
(+9 files in other folders)
